# analisi_comp

./: README.html  README.md  config.py  note.doc  pyproject.toml
dashboard/: dashboard.py
data/output/: df_comp_check.xlsx
notebook/: data visualization.ipynb  exploring_comp.ipynb
scripts/: A_import.py  B_cleaning.py  C_shaping.py  D_output.py
test/: test_pytest.py
