[tool.poetry]
name = "analisi-comp"
version = "0.1.0"
description = "cartella di lavoro per generare l'analisi comp"
authors = ["Davide Motta <davide.motta@luxottica.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pandas = "^2.2.0"
numpy = "^1.26.4"
scipy = "^1.12.0"
pyarrow = "^15.0.0"
openpyxl = "^3.1.2"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
plotly = "^5.19.0"
nbformat = "^5.9.2"
scikit-learn = "^1.4.1.post1"
streamlit = "^1.31.1"
watchdog = "^4.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
